# qtExamples

./: .gitignore
examples/chapter_1/: .clang-format  CMakeLists.txt  Chef.cpp  Chef.h  Recipe.cpp  Recipe.h  main.cpp
examples/chapter_2/: .clang-format  CMakeLists.txt
examples/chapter_2/src/: main.cpp
examples/chapter_2/src/entity/: Recipe.cpp  Recipe.h  RecipeListModel.cpp  RecipeListModel.h
examples/chapter_2/src/infrastructure/: RecipeManager.cpp  RecipeManager.h
examples/chapter_2/src/qml/: Main.qml
